--- a/OpenKenshi/OpenKenshi.csproj
+++ b/OpenKenshi/OpenKenshi.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Nursia\src\Nursia\Nursia.FNA.Core.csproj" />
+  </ItemGroup>
+
 </Project>
